; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/bsnmpd/tools/libbsnmptools/extr_bsnmpmap.c_snmp_int_insert.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/bsnmpd/tools/libbsnmptools/extr_bsnmpmap.c_snmp_int_insert.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snmp_toolinfo = type { i32, i64 }
%struct.snmp_oid2str = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snmp_toolinfo*, %struct.snmp_oid2str*)* @snmp_int_insert to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @snmp_int_insert(%struct.snmp_toolinfo* %0, %struct.snmp_oid2str* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.snmp_toolinfo*, align 8
  %5 = alloca %struct.snmp_oid2str*, align 8
  store %struct.snmp_toolinfo* %0, %struct.snmp_toolinfo** %4, align 8
  store %struct.snmp_oid2str* %1, %struct.snmp_oid2str** %5, align 8
  %6 = load %struct.snmp_toolinfo*, %struct.snmp_toolinfo** %4, align 8
  %7 = icmp ne %struct.snmp_toolinfo* %6, null
  br i1 %7, label %8, label %18

8:                                                ; preds = %2
  %9 = load %struct.snmp_toolinfo*, %struct.snmp_toolinfo** %4, align 8
  %10 = getelementptr inbounds %struct.snmp_toolinfo, %struct.snmp_toolinfo* %9, i32 0, i32 1
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %18

13:                                               ; preds = %8
  %14 = load %struct.snmp_toolinfo*, %struct.snmp_toolinfo** %4, align 8
  %15 = getelementptr inbounds %struct.snmp_toolinfo, %struct.snmp_toolinfo* %14, i32 0, i32 0
  %16 = load %struct.snmp_oid2str*, %struct.snmp_oid2str** %5, align 8
  %17 = call i32 @snmp_mapping_insert(i32* %15, %struct.snmp_oid2str* %16)
  store i32 %17, i32* %3, align 4
  br label %19

18:                                               ; preds = %8, %2
  store i32 -1, i32* %3, align 4
  br label %19

19:                                               ; preds = %18, %13
  %20 = load i32, i32* %3, align 4
  ret i32 %20
}

declare dso_local i32 @snmp_mapping_insert(i32*, %struct.snmp_oid2str*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
